--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <template id="project-input">
       <form>
-
         <div class="form-control">
           <label for="title">Title</label>
           <input type="text" id="title" />
@@ -30,7 +29,14 @@
 
         <button type="submit">ADD PROJECT</button>
       </form>
+    </template>
 
+    <template id="single-project">
+      <li>
+        <h2></h2>
+        <h3></h3>
+        <p></p>
+      </li>
     </template>
 
     <template id="single-project">
